--- a/docker/docker-compose.yml.j2
+++ b/docker/docker-compose.yml.j2
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   solr:
-    image: solr:8.2
+    image: solr:8
     container_name: solr{{ instanceId }}
     ports:
       - "127.0.0.1:8981:8983"
@@ -9,8 +9,16 @@ services:
     volumes:
       - solr{{ instanceId }}_data:/var/solr
     command:
-      - "solr-foreground"
+      - "solr"
+      - "start"
+      - "-f"
       - "-cloud"
+      - "-h"
+      - "{{ host }}"
+      - "-a"
+      - "-Dsolr.disableConfigSetsCreateAuthChecks=true"
+      - "-Djute.maxbuffer=2097152"
+
 
   db:
     build:
