--- a/docker/docker-compose.yml.j2
+++ b/docker/docker-compose.yml.j2
@@ -22,15 +22,18 @@ services:
 
   db:
     build:
-      context: {{ workdir }}/.dotfiles/docker/mssql
-    container_name: mssql{{ instanceId }}
-    hostname: mssql
+      context: {{ workdir }}/.dotfiles/docker/{{ databaseType }}
+    container_name: {{ databaseType }}{{ instanceId }}
+    hostname: {{ databaseType }}{% if databaseType == "mssql" %}
     ports:
-      - 127.0.0.1:1433:1433
+      - 127.0.0.1:1433:1433{% else %}
+    ports:
+      - 127.0.0.1:1521:1521
+      - 127.0.0.1:5500:5500{% endif %}
     environment:
-      ACCEPT_EULA: "yes"
+      ACCEPT_EULA: "yes"{% if databaseType == "mssql" %}
     volumes:
-      - icm_db_mssql{{ instanceId }}:/var/opt/mssql
+      - icm_db_mssql{{ instanceId }}:/var/opt/mssql{% endif %}
 
   mail:
     image: mailhog/mailhog
