--- a/gradle/envrc.j2
+++ b/gradle/envrc.j2
@@ -1,11 +1,12 @@
 PROJECT_BASE={{ wtdir }}
 export GRADLE_USER_HOME=${PROJECT_BASE}/gradle
-export COMPONENTSET=${PROJECT_BASE}/sets/a_responsive
+export COMPONENTSET=${PROJECT_BASE}/intershop-710/projects/indi
 export SERVER=${PROJECT_BASE}/server
-PATH_add ${COMPONENTSET}
+PATH_add ${PROJECT_BASE}
 PATH_add ${SERVER}/local/bin
+PATH_add ${ORACLE_HOME}
 source_env ${SERVER}/local/intershop.properties
 export IS_INSTALLATION IS_HOME IS_SHARE IS_INSTANCE_ETC_DIR IS_INSTANCE_VAR_DIR IS_INSTANCE_TMP_DIR IS_TCM_SHARE IS_SOURCE NLS_LANG NLS_SORT ORACLE_HOME
 export ANT_HOME=${IS_HOME}/tools/ant
+export LD_LIBRARY_PATH=${ORACLE_HOME}:$LD_LIBRARY_PATH
 export ANT_OPTS="-Xmx768M"
-PATH_add ${ANT_HOME}/bin
